# azizka_rust_i18n

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
